force-app/main/default/objects/Rezago__c/Rezago__c.object-meta.xml
<CustomObject>
    <description>Registra los depósitos no identificados.</description>
    <label>Rezago</label>
    <nameField>
        <label>Nombre de Rezago</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rezagos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>