force-app/main/default/objects/Rezago__c/fields/Agencia_Origen__c.field-meta.xml
<CustomField>
    <fullName>Agencia_Origen__c</fullName>
    <description>Detalle de la agencia donde fue realizado el deposito, detallado en el estado de cuenta.</description>
    <label>Agencia Origen</label>
    <length>50</length>
    <type>Text</type>
</CustomField>