force-app/main/default/objects/Rezago__c/fields/Asesor_Rezago__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Rezago__c</fullName>
    <description>Nombre del asesor ingresado en el archivo de carga</description>
    <label>Asesor Rezago</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>