force-app/main/default/objects/Rezago__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <description>Nombre del Banco donde se realizó el deposito</description>
    <label>Banco</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>