force-app/main/default/objects/Rezago__c/fields/Codigo_del_Rezago__c.field-meta.xml
<CustomField>
    <fullName>Codigo_del_Rezago__c</fullName>
    <displayFormat>REZ-{000000}</displayFormat>
    <label>Código del Rezago</label>
    <type>AutoNumber</type>
</CustomField>