force-app/main/default/objects/Rezago__c/fields/Cuenta_Debito__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Debito__c</fullName>
    <label>Cuenta Débito</label>
    <length>30</length>
    <type>Text</type>
</CustomField>