force-app/main/default/objects/Rezago__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Campo de texto con información referida al deposito</description>
    <label>Descripcion</label>
    <type>TextArea</type>
</CustomField>