force-app/main/default/objects/Rezago__c/fields/Descripcion_Nota__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Nota__c</fullName>
    <description>Campo de texto con información referida al deposito</description>
    <label>Descripcion Nota</label>
    <type>TextArea</type>
</CustomField>