force-app/main/default/objects/Rezago__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pendiente (Falso) hasta que se registre la aplicación total del rezago.</description>
    <label>Estatus</label>
    <type>Checkbox</type>
</CustomField>