force-app/main/default/objects/Rezago__c/fields/Fecha_de_registro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_registro__c</fullName>
    <description>DD/MM/YYYY</description>
    <label>Fecha de registro</label>
    <type>Date</type>
</CustomField>