force-app/main/default/objects/Rezago__c/fields/Fecha_del_deposito__c.field-meta.xml
<CustomField>
    <fullName>Fecha_del_deposito__c</fullName>
    <description>DD/MM/YYYY</description>
    <label>Fecha del deposito</label>
    <type>DateTime</type>
</CustomField>