force-app/main/default/objects/Rezago__c/fields/Fondo__c.field-meta.xml
<CustomField>
    <fullName>Fondo__c</fullName>
    <description>Identifica la cuenta de pensión empresarial a la que el Rezago será depositado, asimismo es la llave que identifica la partida contable que el sistema registra.</description>
    <label>Fondo</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>