force-app/main/default/objects/Rezago__c/fields/Moneda_del_deposito__c.field-meta.xml
<CustomField>
    <fullName>Moneda_del_deposito__c</fullName>
    <label>Moneda del deposito</label>
    <length>20</length>
    <type>Text</type>
</CustomField>