force-app/main/default/objects/Rezago__c/fields/Monto_del_deposito__c.field-meta.xml
<CustomField>
    <fullName>Monto_del_deposito__c</fullName>
    <description>Aporte</description>
    <label>Monto del deposito</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>