force-app/main/default/objects/Rezago__c/fields/Monto_parcial_aplicado__c.field-meta.xml
<CustomField>
    <fullName>Monto_parcial_aplicado__c</fullName>
    <description>Corresponde al valor que se acredito parcialmente del total del rezago</description>
    <label>Monto parcial aplicado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>