force-app/main/default/objects/Rezago__c/fields/Monto_pendiente_de_aplicar__c.field-meta.xml
<CustomField>
    <fullName>Monto_pendiente_de_aplicar__c</fullName>
    <description>Corresponde al valor que se encuentra pendiente de aplicar</description>
    <label>Monto pendiente de aplicar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>