force-app/main/default/objects/Rezago__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <description>Alfanumérico identificado como FT o TT o DC o TFS</description>
    <label>Referencia</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>