force-app/main/default/objects/Rezago__c/fields/Rezago__c.field-meta.xml
<CustomField>
    <fullName>Rezago__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifica si el registro corresponde a un rezago</description>
    <label>Rezago</label>
    <type>Checkbox</type>
</CustomField>