force-app/main/default/objects/Rezago__c/fields/Sub_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>Sub_Aplicacion__c</fullName>
    <label>Sub Aplicación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>