force-app/main/default/objects/Rezago__c/fields/Tipo_Nota__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Nota__c</fullName>
    <label>Tipo de Nota</label>
    <length>100</length>
    <type>Text</type>
</CustomField>