force-app/main/default/objects/Rezago__c/fields/Tipo_Transaccion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Transaccion__c</fullName>
    <label>Tipo de Transacción</label>
    <length>10</length>
    <type>Text</type>
</CustomField>