force-app/main/default/objects/Rezago__c/fields/Valor_de_Aporte_Calculado__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Aporte_Calculado__c</fullName>
    <description>Corresponde al valor que fue acreditado finalmente al afiliado después de realizar el retiro en la cuenta “FPC Rezagos” correspondiente</description>
    <label>Valor de Aporte Calculado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>