force-app/main/default/objects/Rezago__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Descripcion_Credito__c</columns>
    <columns>Descripcion_Debito__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>