force-app/main/default/objects/Rezago__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>